Bug: unreachable swipe up on mobile - Banner height change

--- a/src/assets/sass/Components/_banner.scss
+++ b/src/assets/sass/Components/_banner.scss
@@ -36,7 +36,7 @@
     }
     &__header {
       position: relative;
-      height: 80vh;
+      height: 70vh;
       border-bottom-right-radius: 125px;
     }
     &__body {
